--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-dom": "^18.3.1",
     "react-router-dom": "^7.4.0",
     "react-scripts": "5.0.1",
+    "tone": "^15.0.4",
     "typescript": "^5.4.5",
     "vexflow": "^4.2.4",
     "web-vitals": "^2.1.4"
