--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@babel/plugin-transform-private-property-in-object": "^7.25.9",
     "@typescript-eslint/eslint-plugin": "^8.30.1",
     "@typescript-eslint/parser": "^8.30.1",
+    "caniuse-lite": "^1.0.30001610",
     "eslint-config-react-app": "^7.0.1",
     "eslint-plugin-react": "^7.37.5",
     "eslint-plugin-react-hooks": "^5.2.0"
