--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,9 +18,36 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "noEmit": true,
-    "jsx": "react-jsx"
+    "jsx": "preserve",
+    "incremental": true,
+    "plugins": [
+      {
+        "name": "next"
+      }
+    ]
   },
   "include": [
-    "src"
-, "app/components/Keyboard/Linear/PianoKeyLinear.tsx", "app/components/Keyboard/Linear/KeyboardLinear.tsx", "app/components/Keyboard/Circular/CircularSettings.tsx", "app/components/Keyboard/Circular/CircularVisIcons.tsx", "app/components/Keyboard/Circular/CircularVisModeSelect.tsx", "app/components/Keyboard/Circular/CircularVisualizations.tsx", "app/components/Keyboard/Circular/KeyboardCircular.tsx", "app/components/Keyboard/Circular/PianoKeyCircular.tsx", "app/components/Settings/ClearButton.tsx", "app/components/Settings/InputModeSelector.tsx", "app/components/Settings/MonochromeModeToggle.tsx", "app/components/Settings/NoteDisplayModeSelect.tsx", "app/components/Settings/PlayScaleButton.tsx", "app/components/Settings/PresetsSelector.tsx", "app/components/Settings/ScalePreviewToggle.tsx", "app/components/Settings/SettingsContainer.tsx", "tests"  ]
+    "app/components/Keyboard/Circular/CircularSettings.tsx",
+    "app/components/Keyboard/Circular/CircularVisIcons.tsx",
+    "app/components/Keyboard/Circular/CircularVisModeSelect.tsx",
+    "app/components/Keyboard/Circular/CircularVisualizations.tsx",
+    "app/components/Keyboard/Circular/KeyboardCircular.tsx",
+    "app/components/Keyboard/Circular/PianoKeyCircular.tsx",
+    "app/components/Keyboard/Linear/KeyboardLinear.tsx",
+    "app/components/Keyboard/Linear/PianoKeyLinear.tsx",
+    "app/components/Settings/ClearButton.tsx",
+    "app/components/Settings/InputModeSelector.tsx",
+    "app/components/Settings/MonochromeModeToggle.tsx",
+    "app/components/Settings/NoteDisplayModeSelect.tsx",
+    "app/components/Settings/PlayScaleButton.tsx",
+    "app/components/Settings/PresetsSelector.tsx",
+    "app/components/Settings/ScalePreviewToggle.tsx",
+    "app/components/Settings/SettingsContainer.tsx",
+    "src",
+    "tests",
+    ".next/types/**/*.ts"
+  ],
+  "exclude": [
+    "node_modules"
+  ]
 }
