--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/react": "^14.2.1",
     "@testing-library/user-event": "^14.5.2",
     "bootstrap": "^5.3.3",
+    "critters": "^0.0.25",
     "next": "14.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
