--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-dom": "^18.3.1",
     "react-router-dom": "^7.4.0",
     "react-scripts": "5.0.1",
+    "tailwindcss": "^4.1.6",
     "tone": "^15.0.4",
     "typescript": "^5.4.5",
     "vexflow": "^5.0.0",
