--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@mui/material": "^5.15.18",
+    "@tailwindcss/postcss": "^4.1.7",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^15.0.6",
     "@testing-library/user-event": "^13.5.0",
@@ -12,7 +13,7 @@
     "react-dom": "^18.3.1",
     "react-router-dom": "^7.4.0",
     "react-scripts": "5.0.1",
-    "tailwindcss": "^4.1.6",
+    "tailwindcss": "^4.1.7",
     "tone": "^15.0.4",
     "typescript": "^5.4.5",
     "vexflow": "^5.0.0",
